# ft_ls

./: CMakeLists.txt  Makefile  ft_ls
includes/: ft_ls.h
libft/: libft.h
srcs/: flag_l_handler.c  flag_tools.c  ft_ls.c  main.c  main_part.c  manage_data_container.c  manage_list_container.c  parsing.c  print_container.c  print_directory.c  print_directory_l.c  print_flag_l.c  recursion.c  recursion_handler.c  sort_list.c  types_of_sort.c
